--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 anyio==4.12.0
+asgiref==3.11.0
 async-timeout==5.0.1
 betterproto==2.0.0b7
 certifi==2025.11.12
+django==6.0.1
 ffmpy==1.0.0
+gunicorn==23.0.0
 grpclib==0.4.9
 h11==0.16.0
 h2==4.3.0
@@ -15,11 +18,14 @@ mashumaro==3.17
 multidict==6.7.0
 protobuf==6.33.2
 protobuf3-to-dict==0.1.5
+psycopg2-binary==2.9.10
 pyee==13.0.0
 python-dateutil==2.9.0.post0
 python-socks==2.8.0
+redis==5.3.0
 six==1.17.0
-TikTokLive==6.6.5
-typing_extensions==4.15.0
+sqlparse==0.5.5
+tiktoklive==6.6.5
+typing-extensions==4.15.0
 websockets==15.0.1
-websockets_proxy==0.1.3
+websockets-proxy==0.1.3
