--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ asgiref==3.11.0
 async-timeout==5.0.1
 betterproto==2.0.0b7
 certifi==2025.11.12
-django==6.0.1
+django>=5.2,<6.0.1
 ffmpy==1.0.0
 gunicorn==23.0.0
 grpclib==0.4.9
