--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,23 @@
-version: '3.9'
-
 services:
-  db:
-    image: postgres:15
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_DB=django_db
-      - POSTGRES_USER=django_user
-      - POSTGRES_PASSWORD=django_password
-    env_file:
-      - .env
-
-  redis:
-    image: redis:7-alpine
-
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-    ports:
-      - "8000:8000"
-    environment:
-      - DEBUG=1
-    depends_on:
-      - db
-      - redis
-    env_file:
-      - .env
-
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-    depends_on:
-      - web
+    server:
+        container_name: config
+        restart: unless-stopped
+        build:
+            context: .
+            dockerfile: ./Dockerfile
+        entrypoint: /code/entrypoint.sh
+        volumes:
+            - static_volume:/code/staticfiles
+            - media_volume:/code/media
+        expose:
+            - 8000     
+        environment:
+            DEBUG: "False"
+            SECRET_KEY: ${SECRET_KEY}
+            ALLOWED_HOSTS: ${ALLOWED_HOSTS}
+            CSRF_TRUSTED_ORIGINS: ${CSRF_TRUSTED_ORIGINS}
+            DATABASE_URL: ${DATABASE_URL}
 
 volumes:
-  postgres_data:
-  static_volume:
-  media_volume:
+    static_volume:
+    media_volume:
