--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,8 @@ tiktoklive==6.6.5
 typing-extensions==4.15.0
 websockets==15.0.1
 websockets-proxy==0.1.3
+dj-database-url==3.1.0
+gunicorn==24.1.1
+psycopg2-binary==2.9.11
+python-decouple==3.8
+whitenoise==6.11.0
